--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
   <body>
     <header>
       <nav class="nav-bar">
-        <h2>Portfolio</h2>
+        <h2>Portfólio</h2>
         <ul>
           <li><a>Home</a></li>
           <li><a>Projetos</a></li>
-          <li><a>Contato</a></li>
         </ul>
       </nav>
     </header>
