terminado modelo de grid para projetos

--- a/index.html
+++ b/index.html
@@ -106,19 +106,17 @@
         </div>
       </div>
     </div>
-    <div class="container">
-      <div class="item1">1</div>
-      <div class="item2">2</div>
-      <div class="item3">3</div>
-    </div>
     <div class="projetos" id="projetos">
       <h2>Projetos</h2>
       <ul class="container-projetos">
         <li class="projeto">
-          <h3>Título do Projeto</h3>
+          <h3>Calculadora de Carboidratos</h3>
           <p>
-            Descrição do projeto, tecnologias utilizadas e seu papel no
-            desenvolvimento.
+            Um aplicativo web para ajudar a monitorar a ingestão de carboidratos
+            em suas refeições diárias. A aplicação permite registrar alimentos
+            consumidos através de sua busca em um banco de dados, informar a
+            quantidade em gramas de cada alimento e calcular a quantidade total
+            de carboidratos ingeridos
           </p>
           <div class="tecnologias">
             <img
@@ -143,7 +141,18 @@
             />
           </div>
           <img src="./imgs/contador-carboidratos.png" />
-          <div class="navegacao">Navegação</div>
+          <div class="navegacao">
+            <a
+              href="https://github.com/jadir1/Contador-de-Carboidratos"
+              target="_blank"
+              >GitHub</a
+            >
+            <a
+              href="https://contador-de-carboidratos.onrender.com/"
+              target="_blank"
+              >Deploy</a
+            >
+          </div>
         </li>
         <li class="projeto">
           <h3>Título do Projeto</h3>
