--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <a
             class="icone"
             data-tooltip="Me escreva um Email"
-            href="https://github.com/jadir1/"
+            href="mailto:joxf1994@gmail.com"
           >
             <img src="./imgs/gmail.svg" alt="gmail" />
           </a>
@@ -116,7 +116,7 @@
             em suas refeições diárias. A aplicação permite registrar alimentos
             consumidos através de sua busca em um banco de dados, informar a
             quantidade em gramas de cada alimento e calcular a quantidade total
-            de carboidratos ingeridos
+            de carboidratos ingeridos.
           </p>
           <div class="tecnologias">
             <img
@@ -153,27 +153,6 @@
               >Deploy</a
             >
           </div>
-        </li>
-        <li class="projeto">
-          <h3>Título do Projeto</h3>
-          <p>
-            Descrição do projeto, tecnologias utilizadas e seu papel no
-            desenvolvimento.
-          </p>
-        </li>
-        <li class="projeto">
-          <h3>Título do Projeto</h3>
-          <p>
-            Descrição do projeto, tecnologias utilizadas e seu papel no
-            desenvolvimento.
-          </p>
-        </li>
-        <li class="projeto">
-          <h3>Título do Projeto</h3>
-          <p>
-            Descrição do projeto, tecnologias utilizadas e seu papel no
-            desenvolvimento.
-          </p>
         </li>
       </ul>
     </div>
