adicionados links para tecnologias e melhorada responsividade das imagens

--- a/index.html
+++ b/index.html
@@ -74,35 +74,42 @@
           </ul>
         </div>
         <div class="stack">
+	<a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">
           <img
             alt="Js"
             src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-original.svg"
           />
 
+	<a href="https://nodejs.org/en">
           <img
             alt="Node"
             src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg"
           />
-
+	</a>
+	<a href="https://developer.mozilla.org/en-US/docs/Web/HTML">
           <img
             alt="HTML"
             src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original-wordmark.svg"
           />
-
+	</a>
+	<a href="https://developer.mozilla.org/en-US/docs/Web/CSS">
           <img
             alt="CSS"
             src="https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original-wordmark.svg"
           />
-
+	</a>
+	<a href="https://git-scm.com/">
           <img
             alt="Git"
             src="https://www.vectorlogo.zone/logos/git-scm/git-scm-icon.svg"
           />
-
+	</a>
+	<a href="https://www.mongodb.com/">
           <img
             alt="mongoDB"
             src="https://raw.githubusercontent.com/devicons/devicon/master/icons/mongodb/mongodb-original-wordmark.svg"
           />
+	</a>
         </div>
       </div>
     </div>
@@ -140,7 +147,7 @@
               src="https://raw.githubusercontent.com/devicons/devicon/master/icons/mongodb/mongodb-original-wordmark.svg"
             />
           </div>
-          <img src="./imgs/contador-carboidratos.png" />
+          <img src="./imgs/contador-carboidratos.png">
           <div class="navegacao">
             <a
               href="https://github.com/jadir1/Contador-de-Carboidratos"
