--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <a
             class="icone"
             data-tooltip="Visite meu Github"
-            href="https://github.com/jadir1/"
+            href="https://github.com/JadirXavier/"
           >
             <img src="./imgs/github.svg" alt="github" />
           </a>
@@ -56,7 +56,7 @@
           <a
             class="icone"
             data-tooltip="Veja meu currículo"
-            href="https://github.com/jadir1/"
+            href="https://drive.google.com/file/d/1Q3W_htUxbX9JdBbl6sgKBoQ8k4l5QTjp/view?usp=sharing"
           >
             <img src="./imgs/page.svg" alt="currículo" />
           </a>
