adicionado projeto de gerador de senhas

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="perfil">
           <h2>Sobre Mim</h2>
           <ul>
-            <li>📖 Estudando desenvolvimento de interfaces e APIs.</li>
+            <li>📖 Estudando desenvolvimento de APIs.</li>
             <li>💡 Interesse em desenvolvimento Back-end.</li>
             <li>
               🖥️ Buscando oportunidades para atuar como desenvolvedor junior.
@@ -123,7 +123,7 @@
             em suas refeições diárias. A aplicação permite registrar alimentos
             consumidos através de sua busca em um banco de dados, informar a
             quantidade em gramas de cada alimento e calcular a quantidade total
-            de carboidratos ingeridos
+            de carboidratos ingeridos.
           </p>
           <div class="tecnologias">
             <img
@@ -156,6 +156,39 @@
             >
             <a
               href="https://contador-de-carboidratos.onrender.com/"
+              target="_blank"
+              >Deploy</a
+            >
+          </div>
+        </li>
+<li class="projeto">
+          <h3>Gerador de Senhas</h3>
+          <p>
+            Gerador de senhas aleatórias, podendo escolher o tamanho da senha (até 30 caracteres) e escolhendo quais caracteres serão utilizados na geração da senha (letras minúsculas, maiúsculas, números e símbolos). 
+          </p>
+          <div class="tecnologias">
+            <img
+              alt="Js"
+      src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-original.svg"
+            />
+            <img
+              alt="HTML"
+              src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original-wordmark.svg"
+            />
+            <img
+              alt="CSS"
+              src="https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original-wordmark.svg"
+            />
+          </div>
+          <img src="./imgs/gerador-de-senhas.png">
+          <div class="navegacao">
+            <a
+              href="https://github.com/JadirXavier/Gerador-de-Senhas"
+              target="_blank"
+              >GitHub</a
+            >
+            <a
+              href="https://jadirxavier.github.io/Gerador-de-Senhas/"
               target="_blank"
               >Deploy</a
             >
