--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="perfil">
           <h2>Sobre Mim</h2>
           <ul>
-            <li>📖 Estudando desenvolvimento de APIs.</li>
+            <li>📖 Fazendo o curso CS50’s Web Programming with Python and JavaScript.</li>
             <li>💡 Interesse em desenvolvimento Back-end.</li>
             <li>
               🖥️ Buscando oportunidades para atuar como desenvolvedor junior.
@@ -78,6 +78,11 @@
           <img
             alt="Js"
             src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-original.svg"
+          />
+  <a href="https://www.python.org/psf-landing/">
+          <img
+            alt="Python"
+            src="https://s3.dualstack.us-east-2.amazonaws.com/pythondotorg-assets/media/files/python-logo-only.svg"
           />
 
 	<a href="https://nodejs.org/en">
@@ -110,6 +115,7 @@
             src="https://raw.githubusercontent.com/devicons/devicon/master/icons/mongodb/mongodb-original-wordmark.svg"
           />
 	</a>
+  
         </div>
       </div>
     </div>
@@ -198,7 +204,7 @@
     </div>
 
     <footer>
-      <p>&copy; 2023 Jadir de Oliveira. All rights reserved</p>
+      <p>&copy; 2023 Feito por Jadir de Oliveira</p>
     </footer>
   </body>
 </html>
