--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
     </div>
 
     <footer>
-      <p>&copy; 2023 Feito por Jadir de Oliveira</p>
+      <p>Feito por Jadir Xavier</p>
     </footer>
   </body>
 </html>
