Added latest project

--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@
             alt="Python"
             src="https://s3.dualstack.us-east-2.amazonaws.com/pythondotorg-assets/media/files/python-logo-only.svg"
           />
+  <a href="https://www.djangoproject.com/">
+          <img
+            alt="Django"
+            src="https://www.svgrepo.com/show/353657/django-icon.svg"
+          />
 
 	<a href="https://nodejs.org/en">
           <img
@@ -115,6 +120,12 @@
             src="https://raw.githubusercontent.com/devicons/devicon/master/icons/mongodb/mongodb-original-wordmark.svg"
           />
 	</a>
+  <a href="https://www.postgresql.org/">
+    <img
+      alt="PostgreSQL"
+      src="https://www.svgrepo.com/show/303301/postgresql-logo.svg"
+    />
+</a>
   
         </div>
       </div>
@@ -202,6 +213,50 @@
         </li>
       </ul>
     </div>
+    <li class="projeto">
+      <h3>Vitrine Virtual</h3>
+      <p>
+        Plataforma web para exibição de itens à venda, com sistema de login para administradores via painel Django, com uma aplicação customizada dentro do 
+próprio site para inserção, edição e exclusão de itens. 
+      </p>
+      <div class="tecnologias">
+        
+        <img
+          alt="Python"
+  src="https://s3.dualstack.us-east-2.amazonaws.com/pythondotorg-assets/media/files/python-logo-only.svg"
+        />
+        <img
+            alt="Django"
+            src="https://www.svgrepo.com/show/353657/django-icon.svg"
+          />
+        <img
+          alt="Js"
+  src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-original.svg"
+        />
+        <img
+      alt="PostgreSQL"
+      src="https://www.svgrepo.com/show/303301/postgresql-logo.svg"
+    />
+        <img
+          alt="HTML"
+          src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original-wordmark.svg"
+        />
+        <img
+          alt="CSS"
+          src="https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original-wordmark.svg"
+        />
+      </div>
+      <img src="./imgs/vitrine-virtual.png">
+      <div class="navegacao">
+        <a
+          href="https://site-roupas.onrender.com/"
+          target="_blank"
+          >Deploy</a
+        >
+      </div>
+    </li>
+  </ul>
+</div>
 
     <footer>
       <p>Feito por Jadir Xavier</p>
